limit value and return button

--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -10,7 +10,7 @@
     <form action="/purchasePlaces" method="post">
         <input type="hidden" name="club" value="{{club['name']}}">
         <input type="hidden" name="competition" value="{{competition['name']}}">
-        <label for="places">How many places?</label><input type="number" name="places" id=""/>
+        <label for="places">How many places?</label><input type="number" name="places" min="1" max ="12" id=""/>
         <button type="submit">Book</button>
     </form>
        {% with messages = get_flashed_messages()%}
@@ -22,5 +22,6 @@
        </ul>
     {% endif %}
     {% endwith %}
+    <a href="{{ url_for('main.home', club=club, competitions=competitions) }}">Retour</a>
 </body>
 </html>
