--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
-        {% with messages = get_flashed_messages()%}
+    {% with messages = get_flashed_messages()%}
     {% if messages %}
         <ul>
        {% for message in messages %}
@@ -21,5 +21,6 @@
        </ul>
     {% endif %}
     {% endwith %}
+    <a href="{{ url_for('main.club_board', club=club, competitions=competitions) }}">Club board</a>
 </body>
 </html>
