<a> tag text in english

--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -22,6 +22,6 @@
        </ul>
     {% endif %}
     {% endwith %}
-    <a href="{{ url_for('main.home', club=club, competitions=competitions) }}">Retour</a>
+    <a href="{{ url_for('main.home', club=club, competitions=competitions) }}">Back</a>
 </body>
 </html>
