acces to club_board on home page

--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -31,6 +31,6 @@
         {% endfor %}
     </ul>
     {%endwith%}
-
+    <a href="{{ url_for('main.club_board', club=club, competitions=competitions) }}">Club board</a>
 </body>
 </html>
