--- a/app/templates/club-board.html
+++ b/app/templates/club-board.html
@@ -1,27 +1,25 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Points board || GUDLFT</title>
-</head>
-<body>
-    <h2>Club board</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Club</th>
-                <th>Points</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for club in clubs %}
-                <tr>
-                    <td>{{club['name']}}</td>
-                    <td>{{ club['points'] }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+Points board || GUDLFT
+{% endblock %}
+
+{% block content %}
+<h2>Club board</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Club</th>
+      <th>Points</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for club in clubs %}
+    <tr>
+      <td>{{club['name']}}</td>
+      <td>{{ club['points'] }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% endblock %}
