--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,26 +1,25 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUDLFT Registration</title>
-</head>
-<body>
-    <h1>Welcome to the GUDLFT Registration Portal!</h1>
-    Please enter your secretary email to continue:
-    <form action="login" method="post">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id=""/>
-        <button type="submit">Enter</button>
-    </form>
-    {% with messages = get_flashed_messages()%}
-    {% if messages %}
-        <ul>
-       {% for message in messages %}
-            <li>{{message}}</li>
-        {% endfor %}
-       </ul>
-    {% endif %}
-    {% endwith %}
-    <a href="{{ url_for('main.club_board', club=club, competitions=competitions) }}">Club board</a>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+GUDLFT Registration
+{% endblock %}
+
+{% block content %}
+<h1>Welcome to the GUDLFT Registration Portal!</h1>
+Please enter your secretary email to continue:
+<form action="login" method="post">
+  <label for="email">Email:</label>
+  <input type="email" name="email" id="" />
+  <button type="submit">Enter</button>
+</form>
+{% with messages = get_flashed_messages()%}
+{% if messages %}
+<ul>
+  {% for message in messages %}
+  <li>{{message}}</li>
+  {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+<a href="{{ url_for('main.club_board', club=club, competitions=competitions) }}">Club board</a>
+{% endblock %}
