--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,7 +6,7 @@ Summary | GUDLFT Registration
 
 {% block content %}
 <h2>Welcome, {{club['email']}}</h2>
-<a href="{{url_for('main.logout')}}">Logout</a>
+<a href="{{url_for('logout')}}">Logout</a>
 {% with messages = get_flashed_messages()%}
 {% if messages %}
 <ul>
@@ -25,7 +25,7 @@ Points available: {{club['points']}}
     Number of Places: {{comp['numberOfPlaces']}}
     {% if comp['numberOfPlaces']|int>0 %}
     <a
-    href="{{ url_for('main.book',competition=comp['name'],club=club['name']) }}"
+    href="{{ url_for('book',competition=comp['name'],club=club['name']) }}"
     >Book Places</a
     >
     {%endif%}
@@ -34,5 +34,5 @@ Points available: {{club['points']}}
 {% endfor %}
 </ul>
 {%endwith%}
-<a href="{{ url_for('main.club_board', club=club, competitions=competitions) }}">Club board</a>
+<a href="{{ url_for('club_board', club=club) }}">Club board</a>
 {% endblock %}
